#7 Added boilerplate for emotion picking activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="where_you_feel">Kus sa seda tunned?</string>
     <string name="NextButton">Edasi</string>
     <string name="what_triggered">Mis vallandas sinus selle tunde?</string>
+    <string name="what_emotion">Mida sa tundsid?</string>
 </resources>
