#17 Added feeling time activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="NextButton">Edasi</string>
     <string name="what_triggered">Mis vallandas sinus selle tunde?</string>
     <string name="what_emotion">Mida sa tundsid?</string>
+    <string name="when_you_felt">Millal sa seda tunnet tundsid?</string>
 </resources>
