#18 Added reacted activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="what_triggered">Mis vallandas sinus selle tunde?</string>
     <string name="what_emotion">Mida sa tundsid?</string>
     <string name="when_you_felt">Millal sa seda tunnet tundsid?</string>
+    <string name="how_reacted">Kuidas sa reageerisid sellele tundele</string>
 </resources>
